// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GET /flight-log Get flight log with Id should return a single row when data is present for the given Id 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2LastName": "Nieminen",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "SCHOOL",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": "Engine stopped briefly",
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;

exports[`GET /flight-log should allow query parameters to be optional 1`] = `
{
  "acTotalFlightMins": 90,
  "acTotalFlightTime": "1:30",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-IHQ",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 10,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockMins": 100,
  "blockTime": "01:40",
  "creditedMins": null,
  "crew2LastName": null,
  "departureAirport": "EFHK",
  "estimatedCost": null,
  "flightId": "yoy_001",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "PRIVATE",
  "fuelRemainingLitres": 25,
  "fuelUpliftLitres": 30,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 0,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isTrainingProgramPilot": null,
  "landingTimeUtc": "2022-01-15T10:35:00.000Z",
  "minBillableExceptionReason": null,
  "nightFlyingMins": 0,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2022-01-15T09:00:00.000Z",
  "oilUpliftLitres": 0,
  "onBlockTimeUtc": "2022-01-15T10:40:00.000Z",
  "personsOnBoard": 1,
  "picLastName": "Virtanen",
  "status": "VALIDATED",
  "takeoffTimeUtc": "2022-01-15T09:05:00.000Z",
  "totalTimeInService": 1.5,
}
`;

exports[`GET /flight-log should only return data for the logged in user when not admin 1`] = `
{
  "acTotalFlightMins": 286910,
  "acTotalFlightTime": "4781:50",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockMins": 135,
  "blockTime": "02:15",
  "creditedMins": null,
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "estimatedCost": null,
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "SCHOOL",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": "Engine stopped briefly",
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isTrainingProgramPilot": null,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "minBillableExceptionReason": null,
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return 200 for Start Date with time offset 1`] = `
{
  "acTotalFlightMins": 286910,
  "acTotalFlightTime": "4781:50",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockMins": 135,
  "blockTime": "02:15",
  "creditedMins": null,
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "estimatedCost": null,
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "SCHOOL",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": "Engine stopped briefly",
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isTrainingProgramPilot": null,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "minBillableExceptionReason": null,
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return 200 with valid query params 1`] = `
{
  "acTotalFlightMins": 90,
  "acTotalFlightTime": "1:30",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-IHQ",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 10,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockMins": 100,
  "blockTime": "01:40",
  "creditedMins": null,
  "crew2LastName": null,
  "departureAirport": "EFHK",
  "estimatedCost": null,
  "flightId": "yoy_001",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "PRIVATE",
  "fuelRemainingLitres": 25,
  "fuelUpliftLitres": 30,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 0,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isTrainingProgramPilot": null,
  "landingTimeUtc": "2022-01-15T10:35:00.000Z",
  "minBillableExceptionReason": null,
  "nightFlyingMins": 0,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2022-01-15T09:00:00.000Z",
  "oilUpliftLitres": 0,
  "onBlockTimeUtc": "2022-01-15T10:40:00.000Z",
  "personsOnBoard": 1,
  "picLastName": "Virtanen",
  "status": "VALIDATED",
  "takeoffTimeUtc": "2022-01-15T09:05:00.000Z",
  "totalTimeInService": 1.5,
}
`;

exports[`GET /flight-log should return all data for ac when user is admin 1`] = `
[
  {
    "acTotalFlightMins": 286805,
    "acTotalFlightTime": "4780:05",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Sanna1",
    "blockMins": 125,
    "blockTime": "02:05",
    "creditedMins": null,
    "crew2LastName": "Seppälä",
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "eject",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "XC",
    "fuelRemainingLitres": 60,
    "fuelUpliftLitres": 45,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 60,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2024-03-12T01:00:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 115,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Koskinen",
    "status": "NEW",
    "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
    "totalTimeInService": 1.92,
  },
  {
    "acTotalFlightMins": 700060,
    "acTotalFlightTime": "11667:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a01",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-01-08T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-01-08T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-01-08T09:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-01-08T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700150,
    "acTotalFlightTime": "11669:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b01",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-01-15T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-01-15T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-01-15T09:50:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-01-15T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700240,
    "acTotalFlightTime": "11670:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a02",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-01-22T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-01-22T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-01-22T09:50:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-01-22T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700360,
    "acTotalFlightTime": "11672:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 140,
    "blockTime": "02:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c01",
    "flightMins": 120,
    "flightTime": "02:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-02-05T10:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-02-05T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-02-05T10:20:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-02-05T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700405,
    "acTotalFlightTime": "11673:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 65,
    "blockTime": "01:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a03",
    "flightMins": 45,
    "flightTime": "00:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-02-12T08:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-02-12T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-02-12T09:05:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-02-12T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700465,
    "acTotalFlightTime": "11674:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b02",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-02-26T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-02-26T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-02-26T09:20:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-02-26T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 286910,
    "acTotalFlightTime": "4781:50",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockMins": 135,
    "blockTime": "02:15",
    "creditedMins": null,
    "crew2LastName": "Nieminen",
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "mikify",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "SCHOOL",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": 50,
    "incidentOrObservations": "Engine stopped briefly",
    "instrumentFlyingMins": 45,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-03-01T10:00:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 30,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
    "oilUpliftLitres": 1.5,
    "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Korhonen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
    "totalTimeInService": 2,
  },
  {
    "acTotalFlightMins": 287000,
    "acTotalFlightTime": "4783:20",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockMins": 132,
    "blockTime": "02:12",
    "creditedMins": null,
    "crew2LastName": "Heikkinen",
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "bLwnAstr0",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "CHECKFLIGHT",
    "fuelRemainingLitres": 10,
    "fuelUpliftLitres": 40,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 30,
    "invoiceNumber": null,
    "isBillableFlight": false,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-03-03T12:00:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 20,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Hämäläinen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
    "totalTimeInService": 1.5,
  },
  {
    "acTotalFlightMins": 700585,
    "acTotalFlightTime": "11676:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 140,
    "blockTime": "02:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a04",
    "flightMins": 120,
    "flightTime": "02:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-03-05T10:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-03-05T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-03-05T10:20:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-05T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700645,
    "acTotalFlightTime": "11677:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c02",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-03-19T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-03-19T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-03-19T09:20:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-19T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700705,
    "acTotalFlightTime": "11678:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a05",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-04-09T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-04-09T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-04-09T09:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-04-09T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700810,
    "acTotalFlightTime": "11680:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 125,
    "blockTime": "02:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b03",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-04-16T09:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-04-16T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-04-16T10:05:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-04-16T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700900,
    "acTotalFlightTime": "11681:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c03",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-05-07T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-05-07T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-05-07T09:50:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-05-07T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 700975,
    "acTotalFlightTime": "11682:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 95,
    "blockTime": "01:35",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a06",
    "flightMins": 75,
    "flightTime": "01:15",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-05-21T09:25:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-05-21T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-05-21T09:35:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-05-21T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701035,
    "acTotalFlightTime": "11683:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b04",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-05-28T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-05-28T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-05-28T09:20:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-05-28T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701095,
    "acTotalFlightTime": "11684:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 2,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "stl3fn1",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": 25,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-06-01T11:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-06-01T10:00:00.000Z",
    "oilUpliftLitres": 0,
    "onBlockTimeUtc": "2025-06-01T11:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Virtanen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-06-01T10:10:00.000Z",
    "totalTimeInService": 1,
  },
  {
    "acTotalFlightMins": 701155,
    "acTotalFlightTime": "11685:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 4,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "stl3fn2",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": 25,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-06-02T11:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-06-02T10:00:00.000Z",
    "oilUpliftLitres": 0,
    "onBlockTimeUtc": "2025-06-02T11:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Virtanen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-06-02T10:10:00.000Z",
    "totalTimeInService": 1,
  },
  {
    "acTotalFlightMins": 701215,
    "acTotalFlightTime": "11686:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 1,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "stl3fn3",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": 25,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-06-03T11:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-06-03T10:00:00.000Z",
    "oilUpliftLitres": 0,
    "onBlockTimeUtc": "2025-06-03T11:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Virtanen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-06-03T10:10:00.000Z",
    "totalTimeInService": 1,
  },
  {
    "acTotalFlightMins": 701305,
    "acTotalFlightTime": "11688:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a07",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-06-11T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-06-11T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-06-11T09:50:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-06-11T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701380,
    "acTotalFlightTime": "11689:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 95,
    "blockTime": "01:35",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c04",
    "flightMins": 75,
    "flightTime": "01:15",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-06-25T09:25:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-06-25T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-06-25T09:35:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-06-25T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701470,
    "acTotalFlightTime": "11691:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b05",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-07-09T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-07-09T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-07-09T09:50:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-07-09T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701530,
    "acTotalFlightTime": "11692:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a08",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-07-30T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-07-30T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-07-30T09:20:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-07-30T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701635,
    "acTotalFlightTime": "11693:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 125,
    "blockTime": "02:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c05",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-08-06T09:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-08-06T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-08-06T10:05:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-08-06T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701710,
    "acTotalFlightTime": "11695:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 95,
    "blockTime": "01:35",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b06",
    "flightMins": 75,
    "flightTime": "01:15",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-08-20T09:25:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-08-20T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-08-20T09:35:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-08-20T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701755,
    "acTotalFlightTime": "11695:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 65,
    "blockTime": "01:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a09",
    "flightMins": 45,
    "flightTime": "00:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-09-02T08:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-09-02T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-09-02T09:05:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-09-02T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701815,
    "acTotalFlightTime": "11696:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c06",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-09-24T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-09-24T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-09-24T09:20:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-09-24T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 701935,
    "acTotalFlightTime": "11698:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 140,
    "blockTime": "02:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b07",
    "flightMins": 120,
    "flightTime": "02:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-10-01T10:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-10-01T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-10-01T10:20:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-10-01T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702040,
    "acTotalFlightTime": "11700:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 125,
    "blockTime": "02:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25a10",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-10-15T09:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-10-15T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-10-15T10:05:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-10-15T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702130,
    "acTotalFlightTime": "11702:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25c07",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-11-05T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-11-05T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-11-05T09:50:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-11-05T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702190,
    "acTotalFlightTime": "11703:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob25b08",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2025-11-12T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-11-12T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2025-11-12T09:20:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-11-12T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702250,
    "acTotalFlightTime": "11704:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26a01",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-01-06T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-01-06T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-01-06T09:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-01-06T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702340,
    "acTotalFlightTime": "11705:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26b01",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-01-13T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-01-13T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-01-13T09:50:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-01-13T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702430,
    "acTotalFlightTime": "11707:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26a02",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-01-20T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-01-20T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-01-20T09:50:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-01-20T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702550,
    "acTotalFlightTime": "11709:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 140,
    "blockTime": "02:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26c01",
    "flightMins": 120,
    "flightTime": "02:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-02-03T10:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-02-03T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-02-03T10:20:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-02-03T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702595,
    "acTotalFlightTime": "11709:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 65,
    "blockTime": "01:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26a03",
    "flightMins": 45,
    "flightTime": "00:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-02-10T08:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-02-10T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-02-10T09:05:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-02-10T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702655,
    "acTotalFlightTime": "11710:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26b02",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-02-24T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-02-24T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-02-24T09:20:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-02-24T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702775,
    "acTotalFlightTime": "11712:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 140,
    "blockTime": "02:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26a04",
    "flightMins": 120,
    "flightTime": "02:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-03-03T10:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-03-03T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-03-03T10:20:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-03-03T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702880,
    "acTotalFlightTime": "11714:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 125,
    "blockTime": "02:05",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26b03",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-03-17T09:55:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-03-17T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-03-17T10:05:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-03-17T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 702940,
    "acTotalFlightTime": "11715:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26c02",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-04-01T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-04-01T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-04-01T09:20:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-04-01T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 703000,
    "acTotalFlightTime": "11716:40",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26a05",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-04-14T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-04-14T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-04-14T09:20:00.000Z",
    "personsOnBoard": 1,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-04-14T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 703075,
    "acTotalFlightTime": "11717:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 95,
    "blockTime": "01:35",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26a06",
    "flightMins": 75,
    "flightTime": "01:15",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-05-05T09:25:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-05-05T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-05-05T09:35:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-05-05T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 703135,
    "acTotalFlightTime": "11718:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 80,
    "blockTime": "01:20",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26b04",
    "flightMins": 60,
    "flightTime": "01:00",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-05-19T09:10:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-05-19T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-05-19T09:20:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-05-19T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 703225,
    "acTotalFlightTime": "11720:25",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26b05",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-06-09T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-06-09T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-06-09T09:50:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-06-09T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 703315,
    "acTotalFlightTime": "11721:55",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 4,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Teemu1",
    "blockMins": 110,
    "blockTime": "01:50",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26c03",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-06-16T09:40:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-06-16T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-06-16T09:50:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-06-16T08:10:00.000Z",
    "totalTimeInService": null,
  },
  {
    "acTotalFlightMins": 703390,
    "acTotalFlightTime": "11723:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 5,
    "ajlbSeqNo": 3,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Teemu1",
    "blockMins": 95,
    "blockTime": "01:35",
    "creditedMins": null,
    "crew2LastName": null,
    "departureAirport": "EFHK",
    "estimatedCost": null,
    "flightId": "pob26c04",
    "flightMins": 75,
    "flightTime": "01:15",
    "flightType": "PRIVATE",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": null,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 0,
    "invoiceNumber": null,
    "isBillableFlight": true,
    "isBilled": false,
    "isTrainingProgramPilot": null,
    "landingTimeUtc": "2026-07-14T09:25:00.000Z",
    "minBillableExceptionReason": null,
    "nightFlyingMins": 0,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2026-07-14T08:00:00.000Z",
    "oilUpliftLitres": null,
    "onBlockTimeUtc": "2026-07-14T09:35:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Kinnunen",
    "status": "NEW",
    "takeoffTimeUtc": "2026-07-14T08:10:00.000Z",
    "totalTimeInService": null,
  },
]
`;

exports[`GET /flight-log/flightid should return flight for admin with sudo rights 1`] = `
{
  "acTotalFlightTime": "6118:40",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-IHQ",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 81,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": 1002,
  "arrivalAirport": "EFTP",
  "billableMemberId": "Jukka1",
  "billingRemarks": "N/A",
  "blockMins": 150,
  "blockTime": "02:30",
  "createdAt": Any<String>,
  "createdBy": "Jukka1",
  "crew2LastName": "Hämäläinen",
  "crew2MemberId": "Pekka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "efnu4evr",
  "flightMins": 120,
  "flightTime": "02:00",
  "flightType": "XC",
  "fuelRemainingLitres": 60,
  "fuelUpliftLitres": 60,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 60,
  "invoiceNumber": "INV002",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1740914400",
  "landingTimeUtc": "2025-03-02T11:20:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 45,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 2,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740906000",
  "offBlockTimeUtc": "2025-03-02T09:00:00.000Z",
  "oilUpliftLitres": 2,
  "onBlockTimeEpoch": "1740915000",
  "onBlockTimeUtc": "2025-03-02T11:30:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Training flight",
  "personsOnBoard": 2,
  "picLastName": "Nieminen",
  "picMemberId": "Jukka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "INVOICED",
  "takeoffTimeEpoch": "1740907200",
  "takeoffTimeUtc": "2025-03-02T09:20:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
  "validationRemarks": null,
}
`;

exports[`GET /flight-log/flightid should return flights for the logged in user when not admin 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2LastName": "Nieminen",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "SCHOOL",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": "Engine stopped briefly",
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;

exports[`GET /flight-log/totals should return 200 with all ac totals 1`] = `
{
  "acTotalFlightMins": 315935,
  "acTotalFlightTime": "5265:35",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-P28",
  "ajlbSeqNo": 4,
}
`;

exports[`GET /flight-log/totals should return 200 with valid registration 1`] = `
{
  "acTotalFlightMins": 703390,
  "acTotalFlightTime": "11723:10",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbSeqNo": 3,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 1`] = `
{
  "acTotalFlightTime": "4783:20",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "CHECKFLIGHT",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 2`] = `
{
  "acTotalFlightTime": "4783:20",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "CHECKFLIGHT",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 3`] = `
{
  "acTotalFlightTime": "4783:20",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Antti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "CHECKFLIGHT",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 4`] = `
{
  "acTotalFlightTime": "4783:20",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "CHECKFLIGHT",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;
